<resources>
    <string name="app_name">medicine arranger</string>
    <string name="email">Email</string>
    <string name="f">F</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="s">S</string>
    <string name="m">M</string>

    <string name="w">W</string>
    <string name="t">T</string>
    <string name="all">All</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string-array name="typemedicine">
        <item>Tablets</item>
        <item>Capsule</item>
        <item>Syrup</item>
        <item>Injuction</item>
        <item>Drops</item>

    </string-array>
    <string-array name="colormed">
        <item>White</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>black</item>
        <item>Green</item>

    </string-array>
    <string-array name="beforeafter">
        <item>before eating</item>
        <item>after eating</item>
    </string-array>
</resources>
